--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,20 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
-        "illuminate/html": "^5.0",
-        "jenssegers/agent": "^2.3",
-        "barryvdh/laravel-ide-helper": "v2.1.0",
-        "intervention/image": "2.3.4"
+        "laravel/framework": "5.2.*",
+        "laravelcollective/html": "5.2.*",
+        "intervention/image": "2.3.4",
+        "barryvdh/laravel-ide-helper": "v2.1.2"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "symfony/dom-crawler": "~3.0",
+        "symfony/css-selector": "~3.0"
+
     },
     "autoload": {
         "classmap": [
